--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "Email": "guilhermesousa1110@gmail.com",
+    "Password": "mcoa kkwl nubu jbjp",
+    "Host": "smtp.gmail.com",
+    "Displayname": "VitalHUB",
+    "Port": 587
+  }
 }
