--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -12,5 +12,8 @@
     "Host": "smtp.gmail.com",
     "Displayname": "VitalHUB",
     "Port": 587
-  }
+  },
+
+  "AzureBlobStorageConnectionString": "",
+  "AzureBlobStorageContainerName": ""
 }
